# cstring

./: CMakeLists.txt  README.md
include/cstring/: allocator.h  cstring.h  number.h
src/: CMakeLists.txt  allocator.c  cstring.c  number.c
test/: CMakeLists.txt  benchutils.h  cstring_bench.c  cstring_number_test.c  cstring_test.c  number_bench.c  number_test.c
